--- a/docs/Резюме.md
+++ b/docs/Резюме.md
@@ -20,7 +20,7 @@ sidebar_position: 1
 Настольные игры
 ---------------
 
-Ну и наконец настольные игры
+Ну и наконец настольные игры. Очень их люблю.
 
 
 
